--- a/Server/vercel.json
+++ b/Server/vercel.json
@@ -1,10 +1,5 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "*.jsx", "use": "@vercel/node" }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "/" }
-    ]
-  }
-  
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ]
+}
