--- a/Server/package.json
+++ b/Server/package.json
@@ -4,11 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "install-server": "cd Server && npm install",
-    "start-server": "cd Server && node index.js",
-    "install-client": "cd client && npm install",
-    "build-client": "cd client && npm run build",
-    "start-client": "cd client && npm run start"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
